[tool.poetry]
name = "fastapi_ros2"
version = "0.1.0"
description = "Does something cool"
authors = ["Victor Sandoval <stb.4421@gmail.com>"]

packages = [
    {include = "fastapi_ros2"},
]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pydantic = {extras = ["email"], version = "^2.4.2"}
numpy = "^1.26.1"
loguru = "^0.7.2"

[tool.poetry.scripts]
print_publisher = "fastapi_ros2.examples.print_publisher:main"
add_server = "fastapi_ros2.examples.add_server:main"
service = "fastapi_ros2.services.add_two_ints.server:main"
client = "fastapi_ros2.services.add_two_ints.client:main"

[tool.poetry.group.test.dependencies]
nox = "^2023.4.22"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
